completes the function validateInput in scriptHelper.js. Uses validateInput to test if user input is appropriate for specified field. Begins the process of changing launch status

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE>
 <html>
     <head>
-        <title>Launch Checklist</title>
+        <title >Launch Checklist</title>
         <link rel = "stylesheet" type = "text/css" href = "styles.css" />
         <script src = "scriptHelper.js"></script>
         <script src = "script.js"></script>
         <script src = "bundle.js"></script>
     </head>
     <body>
-        <h1>Launch Checklist Form</h1>
+        
+        <h1 id='title'>Launch Checklist Form</h1>
         <div id="missionTarget" data-testid="missionTarget">
             <!-- Fetch some planetary data -->
         </div>  
@@ -18,13 +19,13 @@
                     <label>Pilot Name <input type="text" name="pilotName" id="pilotName"/></label>
                 </div>
                 <div class="formField">
-                    <label>Co-pilot Name <input type="text" name="copilotName"/></label>
+                    <label>Co-pilot Name <input type="text" name="copilotName" id='copilotName'/></label>
                 </div>
                 <div class="formField">
-                    <label>Fuel Level (L) <input type="text" name="fuelLevel"/></label> 
+                    <label>Fuel Level (L) <input type="text" name="fuelLevel" id="fuelLevel"/></label> 
                 </div>
                 <div class="formField">
-                    <label>Cargo Mass (kg) <input type="text" name="cargoMass"/></label>
+                    <label>Cargo Mass (kg) <input type="text" name="cargoMass" id="cargoMass"/></label>
                 </div>
                 <button id="formSubmit">Submit</button>
             </form>
@@ -37,6 +38,7 @@
                     <li id="copilotStatus" data-testid="copilotStatus">Co-pilot Ready</li>
                     <li id="fuelStatus" data-testid="fuelStatus">Fuel level high enough for launch</li>
                     <li id="cargoStatus" data-testid="cargoStatus">Cargo mass low enough for launch</li>
+                    
                 </ol>
             </div>
         </div>
